# network-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  common.cmake
example/async_client_example/: CMakeLists.txt  async_client_example.cpp
example/battle_server/: CMakeLists.txt  battle_server.cpp  stdafx.h
example/battle_server/battle/: arena_battle.cpp  arena_battle.h
example/battle_server/new_proto/: BRStartBattle_Wrap.cpp  CSCreateRoom_Wrap.cpp  CSEndBattle_Wrap.cpp  CSExitRoom_Wrap.cpp  CSPing_Action.cpp  CSPing_Wrap.cpp  CSPlayerInput_Action.cpp  CSRequestRoomList_Wrap.cpp  CSSwitchShip_Wrap.cpp  CSSwitchSlot_Wrap.cpp  RBStartBattle_Action.cpp  RBStartBattle_Wrap.cpp  SCBeginLoadResource_Wrap.cpp  SCEndBattle_Wrap.cpp  SCFactionMsg_Wrap.cpp  SCInstantiate_Wrap.cpp  SCJoinRoom_Wrap.cpp  SCRoomDestroyed_Wrap.cpp  SCRoomInfo_Wrap.cpp  SCServerInfo_Wrap.cpp  SCSwitchShip_Wrap.cpp  SLoginGame_Wrap.cpp
example/battle_server/service/: battle_config.cpp  battle_config.h  battle_manager.cpp  battle_manager.h  service_check.hpp  update_timer.cpp  update_timer.h
example/center_server/: CMakeLists.txt  center_server.cpp  stdafx.h
example/meta_example/: CMakeLists.txt  meta_example.cpp  stdafx.h
example/mysql_example/: CMakeLists.txt  mysql_example.cpp
example/room_server/: CMakeLists.txt  room_server.cpp  stdafx.h
example/room_server/new_proto/: BRStartBattle_Action.cpp  BRStartBattle_Wrap.cpp  CLoginGame_Wrap.cpp  CSClientClose_Wrap.cpp  CSCreateRoom_Action.cpp  CSCreateRoom_Wrap.cpp  CSEndBattle_Action.cpp  CSEndBattle_Wrap.cpp  CSEndLoadResource_Action.cpp  CSEndLoadResource_Wrap.cpp  CSExitRoom_Action.cpp  CSExitRoom_Wrap.cpp  CSJoinRoom_Action.cpp  CSJoinRoom_Wrap.cpp  CSPing_Wrap.cpp  CSPlayerInput_Wrap.cpp  CSRequestRoomList_Action.cpp  CSRequestRoomList_Wrap.cpp  CSStartBattle_Action.cpp  CSStartBattle_Wrap.cpp  CSSwitchSeat_Action.cpp  CSSwitchSeat_Wrap.cpp  CSSwitchShip_Action.cpp  CSSwitchShip_Wrap.cpp  CSSwitchSlot_Action.cpp  CSSwitchSlot_Wrap.cpp  CSSyncCommandMsg_Wrap.cpp  RBStartBattle_Wrap.cpp  SCBattleResult_Wrap.cpp  SCBeginLoadResource_Wrap.cpp  SCConnect_Wrap.cpp  SCCreateRoom_Wrap.cpp  SCDisConnect_Wrap.cpp  SCEndBattle_Wrap.cpp  SCExitRoom_Wrap.cpp  SCFactionMsg_Wrap.cpp  SCInstantiate_Wrap.cpp  SCJoinRoom_Wrap.cpp  SCPing_Wrap.cpp  SCPlayerInput_Wrap.cpp  (+12 more)
example/thrift_client/: CMakeLists.txt  main.cpp
example/thrift_server/: CMakeLists.txt  main.cpp
network/: CMakeLists.txt  all.hpp  channel  client.hpp  orm.hpp  serialize.hpp  server.hpp
network/base/: GameObjectStream.h  MemoryPoolMgr.h  all.hpp  auto_mocker.h  cast.hpp  channel.h  common.h  date_time.hpp  ensure.hpp  excetion.hpp  instance_factory.hpp  log.hpp  memory_pool.hpp  memory_stream.hpp  scope_guard.h  scope_guard.hpp  stop_watch.h  stop_watch.hpp  thread_pool.h  type_id.hpp  type_map.hpp  utils.hpp  world.hpp
network/client/: async_client.hpp  sync_client.hpp
network/cmder/: base_cmder.h  base_cmder.hpp  base_repeat_cmder.h  base_repeat_cmder.hpp  base_waitable_cmder.h  base_waitable_cmder.hpp  cmder_config.h  cmder_config.hpp  cmder_helper.h  cmder_helper.hpp  cmder_meta.hpp  cmder_reader.h  cmder_reader.hpp  cmder_service.h  cmder_service.hpp  execute_cmder_service.h  execute_cmder_service.hpp  icmder.h  icmder.hpp  icmder_manager.h  icmder_manager.hpp  waitable_object.h
network/cmder/subcmd/: all.h  (+11 more)
network/codec/: codec.hpp  codec_common.hpp  codec_gos.hpp  codec_json.hpp  codec_thrift.hpp  codec_xml.hpp
network/gameserver/: async_func.hpp  common.hpp  config_service.hpp  game_server.hpp  game_server_base.hpp  ios_pool.hpp  irouter_base.hpp  msg_pack.hpp  proto.hpp  protocol.hpp  raw_msg.hpp  server.hpp  server_config.hpp  server_manager.hpp  service_base.hpp  tcp_connect.hpp  tcp_server.hpp
network/meta/: base_meta.hpp  db_meta.hpp  enum_meta.hpp  meta.hpp  meta_common.hpp  method_meta.hpp  struct_meta.hpp  type_meta.hpp
network/module/: base_module.hpp  imodule.hpp  module_manager.hpp
network/msgbus/: event.hpp  msg_signal.hpp
network/net/: async_connection.hpp  async_func.hpp  async_rpc_channel.hpp  async_rpc_context.hpp  common.hpp  exception.hpp  invoker_traits.hpp  ios_pool.hpp  ios_wrapper.hpp  irouter.hpp  irouter_base.hpp  net_common.hpp  protocol.hpp  raw_msg.hpp  router.hpp  router_impl.hpp  router_register.hpp  rpc_task.hpp  schedule_timer.hpp  tcp_connect.hpp  tcp_server.hpp  timer_manager.hpp  wait_barrier.hpp
network/orm/: db_common.hpp  db_meta.hpp  expr.hpp  mysql_db.hpp  smart_db.hpp
network/reflect/: Argument.cpp  Argument.h  Array.h  ArrayVariantContainer.h  ArrayWrapper.cpp  ArrayWrapper.h  ArrayWrapperBase.h  ArrayWrapperContainer.h  Constructor.cpp  Constructor.h  ConstructorInvoker.h  Destructor.cpp  Destructor.h  DestructorInvoker.h  Enum.cpp  Enum.h  EnumBase.cpp  EnumBase.h  EnumContainer.h  Field.cpp  Field.h  Function.cpp  Function.h  FunctionInvoker.h  Global.cpp  Global.h  Invokable.h  Macros.h  Meta.h  MetaContainer.h  MetaManager.cpp  MetaManager.h  MetaProperty.h  MetaTraits.h  Method.cpp  Method.h  MethodInvoker.h  Object.h  ObjectWrapper.cpp  ObjectWrapper.h  (+17 more)
network/rpc/: client.hpp  server.hpp  thrift_client.hpp  thrift_server.hpp
network/serialize/: all.hpp  bpo_adapter.hpp  common.hpp  csv_adapter.hpp  deserializer.hpp  enum.hpp  gos_adapter.hpp  json_adapter.hpp  json_util.hpp  parser.hpp  serializer.hpp  thrift_adapter.hpp  xml_adapter.hpp
network/server/: server.hpp
network/service/: base_service.hpp  iservice.hpp  service_manager.hpp  service_meta.hpp
network/thread/: executor.hpp  executor_pool.hpp
network/timer/: schedule_timer.hpp  timer_manager.hpp
network/traits/: function_traits.hpp  traits.hpp
network/util/: cast.hpp  file.hpp  net.hpp  path.hpp  random.hpp  random_string.hpp  size.hpp  string.hpp  thread.hpp  time.hpp
test/common_test/: CMakeLists.txt  auto_mocker.h  base_test.cpp  bpo_test.cpp  common.h  enum_test.cpp  gos_test.cpp  info_test.cpp  main.cpp  program_options_test.cpp  se_test.cpp  xml_test.cpp
test/orm_test/: CMakeLists.txt  expr_test.cpp
(+96 files in other folders)
