include(../cmake/common.cmake)

file(GLOB SRC "*.h" "*.hpp")

add_files(SRC false "base")
add_files(SRC false "cmder")
add_files(SRC false "cmder/subcmd")
add_files(SRC false "codec")
add_files(SRC false "gameserver")
add_files(SRC false "meta")
add_files(SRC false "msgbus")
add_files(SRC false "orm")
add_files(SRC false "rpc")
add_files(SRC false "rpc/client")
add_files(SRC false "rpc/net")
add_files(SRC false "rpc/server")
add_files(SRC false "serialize")
add_files(SRC false "serialize/detail")
add_files(SRC false "service")
add_files(SRC false "timer")
add_files(SRC false "traits")

add_library(network STATIC ${SRC})
set_target_properties(network PROPERTIES LINKER_LANGUAGE CXX)